<?xml version="1.0"?>
<package format="3">
  <name>tiago_webots_ros2_driver</name>
  <version>0.9.0</version>
  <description>The ROS2 package containing Tiago's robot components for Webots</description>
  <maintainer email="renan028@gmail.com"></maintainer>
  <author>Renan Freitas</author>

  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>webots_ros2_core</exec_depend>

  <depend>rviz2</depend> 
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>vision_msgs</depend>
  <depend>webots_ros2_msgs</depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
