<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tiago_webots_ros2_mapping</name>
  <version>0.9.0</version>
  <description>
    ROS 2 launch scripts for cartographer
  </description>
  <maintainer email="jaroslaw.karwowski.dokt@pw.edu.pl">Will Son</maintainer>
  <license>Apache 2.0</license>
  <url type="website">TODO</url>
  <url type="repository">TODO</url>
  <url type="bugtracker">TODO</url>
  <author email="renan028@gmail.com"></author>
  <author email="jaroslaw.karwowski.dokt@pw.edu.pl">Jarosław Karwowski</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rviz2</depend>
  <exec_depend>cartographer_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
