<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tiago_webots_ros2_navigation</name>
  <version>0.9.0</version>
  <description>
    ROS 2 launch scripts for navigation
  </description>
  <maintainer email="jaroslaw.karwowski.dokt@pw.edu.pl">Will Son</maintainer>
  <license>Apache 2.0</license>
  <url type="website">TODO</url>
  <url type="repository">TODO</url>
  <url type="bugtracker">TODO</url>
  <author email="renan028@gmail.com"></author>
  <author email="jaroslaw.karwowski.dokt@pw.edu.pl">Jarosław Karwowski</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_map_server</depend>
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
